Additional permission docs publish.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -65,6 +65,8 @@ jobs:
 
     release-python-docs:
         runs-on: ubuntu-latest
+        permissions:
+            contents: write
         needs: ['release-python-plugin']
         steps:
             - name: Build and Publish Docs
