--- a/.github/actions/publish-python-sdk/action.yml
+++ b/.github/actions/publish-python-sdk/action.yml
@@ -61,4 +61,5 @@ runs:
           shell: bash
           run: |
               poetry config pypi-token.pypi ${{ env.PYPI_AUTH_TOKEN }}
-              poetry publish --build
+              rm -rf dist
+              poetry publish --no-interaction
