Try different command.

--- a/.github/actions/publish-python-sdk/action.yml
+++ b/.github/actions/publish-python-sdk/action.yml
@@ -61,5 +61,4 @@ runs:
           shell: bash
           run: |
               poetry config pypi-token.pypi ${{ env.PYPI_AUTH_TOKEN }}
-              rm -rf dist
-              poetry publish --no-interaction
+              poetry publish --build --no-interaction
