--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -18,6 +18,14 @@ on:
                 description: 'Should release @launchdarkly/... packages.'
                 type: boolean
                 required: true
+            release_launchdarkly_python:
+                description: 'Should release @launchdarkly/observability-python package.'
+                type: boolean
+                required: true
+            python_tag_name:
+                description: 'The tag name for the python package. Should be set when publishing a python package.'
+                type: string
+                required: false
 
 permissions:
     id-token: write
@@ -29,6 +37,7 @@ permissions:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     publish-package:
+        if: ${{ inputs.release_highlight == true || inputs.release_launchdarkly == true }}
         runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout
@@ -83,3 +92,35 @@ jobs:
               env:
                   LD_RELEASE_IS_PRERELEASE: ${{ inputs.prerelease }}
                   LD_RELEASE_IS_DRYRUN: ${{ inputs.dry-run }}
+
+    publish-python-sdk:
+        runs-on: ubuntu-latest
+        if: ${{ inputs.release_launchdarkly_python == true }}
+        permissions:
+            id-token: write # Used for publishing secrets and documentation.
+        outputs:
+            package-hashes: ${{ steps.publish.outputs.package-hashes }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            - run: git submodule update --init --recursive
+
+            - name: Publish Python SDK
+              id: publish
+              uses: ./.github/actions/publish-python-sdk
+              with:
+                  workspace-path: sdk/@launchdarkly/observability-python
+                  aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
+
+    publish-python-provenance:
+        needs: ['publish-python-sdk']
+        if: ${{ inputs.release_launchdarkly_python == true }}
+        permissions:
+            actions: read
+            id-token: write
+            contents: write
+        uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v2.0.0
+        with:
+            base64-subjects: '${{ needs.publish-python-sdk.outputs.package-hashes }}'
+            upload-assets: true
+            upload-tag-name: ${{ inputs.python_tag_name }}
