--- a/go/.golangci.yaml
+++ b/go/.golangci.yaml
@@ -1,25 +1,17 @@
+version: "2"
 run:
-  deadline: 120s
   tests: false
-
 linters:
   enable:
     - bodyclose
     - dupl
-    - errcheck
-    - goconst
     - gochecknoglobals
     - gochecknoinits
     - goconst
     - gocritic
     - gocyclo
     - godox
-    - gofmt
-    - goimports
     - gosec
-    - gosimple
-    - govet
-    - ineffassign
     - lll
     - misspell
     - nakedret
@@ -27,25 +19,37 @@ linters:
     - prealloc
     - revive
     - staticcheck
-    - stylecheck
-    - typecheck
     - unconvert
     - unparam
-    - unused
     - whitespace
-  fast: false
-
-linters-settings:
-  gofmt:
-    simplify: false
-  goimports:
-    local-prefixes: gopkg.in/launchdarkly,github.com/launchdarkly
-  revive:
-    rules:
-      - name: exported
-        arguments:
-          - disableStutteringCheck
-
+  settings:
+    revive:
+      rules:
+        - name: exported
+          arguments:
+            - disableStutteringCheck
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
-  exclude-use-default: false
   max-same-issues: 1000
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  settings:
+    gofmt:
+      simplify: false
+    goimports:
+      local-prefixes:
+        - gopkg.in/launchdarkly
+        - github.com/launchdarkly
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
