--- a/.github/workflows/go-plugin.yml
+++ b/.github/workflows/go-plugin.yml
@@ -15,7 +15,7 @@ jobs:
     build:
         permissions:
             contents: read
-        name: Quality Check and Publish
+        name: Quality Check
         runs-on: ubuntu-latest
         defaults:
             run:
