feat: Basic go plugin implementation. (#139)
## Summary

Adds basic observability plugin support.

This doesn't implement any custom integrations or handlers, but just the
basic OpenTelemetry setup packaged as a plugin.

## How did you test this change?

<!--
Frontend - Leave a screencast or a screenshot to visually describe the
changes.
-->

## Are there any deployment considerations?

<!--
 Backend - Do we need to consider migrations or backfilling data?
-->

--- a/.github/workflows/go-plugin.yml
+++ b/.github/workflows/go-plugin.yml
@@ -15,7 +15,7 @@ jobs:
     build:
         permissions:
             contents: read
-        name: Quality Check and Publish
+        name: Quality Check
         runs-on: ubuntu-latest
         defaults:
             run:
@@ -32,9 +32,6 @@ jobs:
 
             - name: Install dependencies
               run: make install
-
-            - name: Format check
-              run: make format
 
             - name: Run linter
               uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9
