--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,6 +14,8 @@ jobs:
         outputs:
             python-plugin-released: ${{ steps.release.outputs['sdk/@launchdarkly/observability-python--release_created'] }}
             python-plugin-tag-name: ${{ steps.release.outputs['sdk/@launchdarkly/observability-python--tag_name'] }}
+            android-plugin-released: ${{ steps.release.outputs['sdk/@launchdarkly/observability-android--release_created'] }}
+            android-plugin-tag-name: ${{ steps.release.outputs['sdk/@launchdarkly/observability-android--tag_name'] }}
         steps:
             - uses: googleapis/release-please-action@a02a34c4d625f9be7cb89156071d8567266a2445
               id: release
@@ -65,3 +67,20 @@ jobs:
             base64-subjects: '${{ needs.release-python-plugin.outputs.package-hashes }}'
             upload-assets: true
             upload-tag-name: ${{ needs.release-package.outputs.python-plugin-tag-name }}
+
+    release-android-plugin:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
+        needs: ['release-package']
+        if: ${{ needs.release-package.outputs.android-plugin-released == 'true' }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
+            - name: Publish Android SDK
+              id: publish
+              uses: ./.github/actions/publish-android-sdk
+              with:
+                  workspace-path: sdk/@launchdarkly/observability-android
+                  aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
