--- a/.github/workflows/localtest.yml
+++ b/.github/workflows/localtest.yml
@@ -11,4 +11,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ta/O11Y-388/setup-build-publish-actions
       - uses: ./.github/actions/publish-android-sdk/action.yml
