--- a/dotnet/SandboxAPI/SandboxAPI.csproj
+++ b/dotnet/SandboxAPI/SandboxAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LaunchDarkly.ServerSdk" Version="8.10.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
