--- a/dotnet/SandboxAPI/SandboxAPI.csproj
+++ b/dotnet/SandboxAPI/SandboxAPI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="LaunchDarkly.ServerSdk" Version="8.10.0" />
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.12.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
