--- a/sdk/@launchdarkly/observability-android/gradle.properties
+++ b/sdk/@launchdarkly/observability-android/gradle.properties
@@ -5,3 +5,6 @@ org.gradle.configuration-cache=true
 
 android.useAndroidX=true
 
+#x-release-please-start-version
+version=0.1.0
+#x-release-please-end
