--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,6 +7,16 @@
 			"include-v-in-tag": false,
 			"extra-files": ["PROVENANCE.md"],
 			"include-component-in-tag": true
+		},
+		"sdk/@launchdarkly/observability-android": {
+			"package-name": "launchdarkly-observability-android",
+			"release-type": "simple",
+			"versioning": "default",
+			"include-v-in-tag": false,
+			"include-component-in-tag": true,
+			"extra-files": [
+				"gradle.properties"
+			]
 		}
 	}
 }
