--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -117,6 +117,7 @@
 		"graphql": "^16.8.1",
 		"graphql-request": "^6.1.0",
 		"graphql-tag": "^2.12.6",
+		"graphql-ws": "^5.16.0",
 		"js-cookie": "^3.0.5",
 		"json-stringify-safe": "^5.0.1",
 		"npm-run-all": "^4.1.5",
