--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,3 +1,4 @@
 {
-	"sdk/@launchdarkly/observability-python": "0.1.0"
+	"sdk/@launchdarkly/observability-python": "0.1.0",
+	"e2e/go-plugin": "0.0.0"
 }
