--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -135,6 +135,9 @@ jobs:
         permissions:
             id-token: write
         steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
             - name: Publish Android SDK
               id: publish
               uses: ./.github/actions/publish-android-sdk
