--- a/.github/workflows/dotnet-plugin.yml
+++ b/.github/workflows/dotnet-plugin.yml
@@ -8,6 +8,8 @@ on:
         paths:
             - 'sdk/@launchdarkly/observability-dotnet/**'
             - '.github/workflows/dotnet-plugin.yml'
+permissions:
+    contents: read
 
 jobs:
     build-and-test:
