--- a/release-please-config.json
+++ b/release-please-config.json
@@ -15,6 +15,16 @@
 			"include-v-in-tag": false,
 			"include-component-in-tag": true,
 			"extra-files": ["gradle.properties"]
+		},
+		"go": {
+			"release-type": "go",
+			"tag-separator": "/",
+			"bump-minor-pre-major": true,
+			"release-as": "0.1.0",
+			"versioning": "default",
+			"include-v-in-tag": true,
+			"include-component-in-tag": true,
+			"extra-files": ["version.go"]
 		}
 	}
 }
