--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -9,7 +9,7 @@ on:
     workflow_dispatch:
     push:
         branches: ['main']
-    pull_request:
+    pull_request_target:
         branches: ['main']
     schedule:
         - cron: '26 19 * * 1'
