--- a/.github/workflows/elixir-sdk.yml
+++ b/.github/workflows/elixir-sdk.yml
@@ -3,7 +3,7 @@ name: 'Elixir SDK code checks'
 on:
     push:
         branches: ['main']
-    pull_request:
+    pull_request_target:
         types: [opened, synchronize]
         paths:
             - 'sdk/highlight-ex/**'
