--- a/.github/workflows/go-plugin-e2e.yml
+++ b/.github/workflows/go-plugin-e2e.yml
@@ -3,7 +3,7 @@ name: Go Observability Plugin E2E
 on:
     push:
         branches: ['main']
-    pull_request:
+    pull_request_target:
         types: [opened, synchronize]
         paths:
             - 'e2e/go-plugin/**'
