--- a/.github/workflows/go-plugin.yml
+++ b/.github/workflows/go-plugin.yml
@@ -3,7 +3,7 @@ name: Go Observability Plugin
 on:
     push:
         branches: ['main']
-    pull_request:
+    pull_request_target:
         types: [opened, synchronize]
         paths:
             - 'go/**'
