--- a/.github/workflows/python-plugin.yml
+++ b/.github/workflows/python-plugin.yml
@@ -3,7 +3,7 @@ name: Python Observability Plugin
 on:
     push:
         branches: ['main']
-    pull_request:
+    pull_request_target:
         types: [opened, synchronize]
         paths:
             - 'sdk/@launchdarkly/observability-python/**'
