--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -3,7 +3,7 @@ name: Ruby SDK
 on:
     push:
         branches: ['main']
-    pull_request:
+    pull_request_target:
         types: [opened, synchronize]
         paths:
             - 'sdk/highlight-ruby/**'
