chore: Set package name for go plugin.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -18,6 +18,7 @@
 		},
 		"go": {
 			"release-type": "go",
+			"package-name": "go",
 			"tag-separator": "/",
 			"bump-minor-pre-major": true,
 			"release-as": "0.1.0",
