feat: Add sampling support to React Native observability plugin (#108)
Disregard Devin's description below... ended up rewriting this and just
copying over the sampling logic from highlight-node to
observability-shared and then leveraging that in the react native
plugin.

* [ ] Sampling support
* [ ] Ability to manually set context on spans
* [ ] Cache counters to avoid re-creating on every metric emission
* [ ] Add backendUrl config option
* [ ] Update logic for fallbacks on buffered calls

---

# Implement comprehensive sampling functionality for React Native
observability plugin

## Summary

This PR implements full sampling functionality for the React Native
observability plugin, following the same patterns as the highlight-run
and highlight-node plugins. The implementation includes:

- **GraphQL-based configuration fetching** to dynamically retrieve
sampling rules from LaunchDarkly's backend
- **CustomSampler** with complex matching logic supporting regex
patterns, attribute matching, and span event matching
- **Export-time sampling** that filters spans and logs before sending to
reduce backend load
- **Integration with ObservabilityClient** to automatically fetch and
apply sampling configurations
- **GraphQL codegen fixes** by copying working generated files from the
node plugin

The sampling system supports sophisticated matching rules including
regex patterns for span names, attribute key/value pairs, log messages,
severity levels, and span events. Each matching rule can specify a
sampling ratio (e.g., 1-in-10) to control data volume.

## Review & Testing Checklist for Human

**Risk Level: 🟡 Medium** - Complex sampling logic with performance
implications

- [ ] **Test end-to-end sampling scenarios** - Verify that sampling
actually reduces telemetry volume when rules match spans/logs
- [ ] **Validate GraphQL integration** - Confirm that
`getSamplingConfig()` successfully fetches real sampling configurations
from `https://pub.observability.app.launchdarkly.com`

--- a/sdk/@launchdarkly/observability-shared/tsconfig.json
+++ b/sdk/@launchdarkly/observability-shared/tsconfig.json
@@ -8,7 +8,10 @@
 		"preserveSymlinks": false,
 		"esModuleInterop": true,
 		"target": "ES2020",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"resolveJsonModule": true,
+		"outDir": "./dist",
+		"rootDir": "./src"
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
