--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -39,6 +39,7 @@
 		"@opentelemetry/instrumentation-xml-http-request": "^0.203.0",
 		"@opentelemetry/otlp-exporter-base": "^0.203.0",
 		"@opentelemetry/resources": "^2.0.1",
+		"@opentelemetry/sdk-logs": "^0.203.0",
 		"@opentelemetry/sdk-metrics": "^2.0.1",
 		"@opentelemetry/sdk-trace-base": "2.0.1",
 		"@opentelemetry/sdk-trace-web": "^2.0.1",
