--- a/sdk/@launchdarkly/observability-shared/package.json
+++ b/sdk/@launchdarkly/observability-shared/package.json
@@ -8,15 +8,20 @@
 	},
 	"scripts": {
 		"build": "tsc",
-		"dev": "tsc --watch"
+		"codegen": "graphql-codegen",
+		"dev": "tsc --watch",
+		"test": "vitest"
 	},
 	"devDependencies": {
-		"typescript": "^5.8.3"
+		"@graphql-codegen/cli": "^5.0.7",
+		"typescript": "^5.8.3",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/core": "^2.0.1",
-		"@opentelemetry/sdk-trace-web": "^2.0.1",
+		"@opentelemetry/sdk-logs": "^0.203.0",
+		"@opentelemetry/sdk-trace-base": "^2.0.1",
 		"graphql": "^16.11.0"
 	}
 }
