--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -85,3 +85,4 @@ jobs:
               with:
                   workspace-path: sdk/@launchdarkly/observability-android
                   aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
+                  dry-run: true
