--- a/e2e/react-native/package.json
+++ b/e2e/react-native/package.json
@@ -17,10 +17,8 @@
 	"dependencies": {
 		"@expo/ngrok": "^4.1.3",
 		"@expo/vector-icons": "^14.0.2",
-		"@opentelemetry/api": "^1.9.0",
-		"@opentelemetry/core": "^1.30.0",
-		"@opentelemetry/resources": "^1.30.0",
-		"@opentelemetry/sdk-trace-base": "^1.30.0",
+		"@launchdarkly/observability-react-native": "workspace:*",
+		"@launchdarkly/react-native-client-sdk": "^10.0.0",
 		"@react-navigation/bottom-tabs": "^7.2.0",
 		"@react-navigation/native": "^7.0.14",
 		"expo": "~52.0.23",
