--- a/sdk/@launchdarkly/observability-dotnet/test/LaunchDarkly.Observability.Tests/LaunchDarkly.Observability.Tests.csproj
+++ b/sdk/@launchdarkly/observability-dotnet/test/LaunchDarkly.Observability.Tests/LaunchDarkly.Observability.Tests.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="System.Text.Json" Version="8.0.5"/>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0"/>
         <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.12.0" />
+        <PackageReference Include="Moq" Version="4.20.70" />
     </ItemGroup>
 
     <ItemGroup>
