--- a/sdk/@launchdarkly/observability-dotnet/test/LaunchDarkly.Observability.Tests/LaunchDarkly.Observability.Tests.csproj
+++ b/sdk/@launchdarkly/observability-dotnet/test/LaunchDarkly.Observability.Tests/LaunchDarkly.Observability.Tests.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
         <PackageReference Include="System.Text.Json" Version="8.0.5"/>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0"/>
+        <PackageReference Include="OpenTelemetry" Version="1.12.0" />
         <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.12.0" />
     </ItemGroup>
 
