feat: Add graphql query to get sampling config. (#181)
## Summary

Uses the sampling tace and log exporter with the sampling configuration.

The approach used for GraphQL is a bit different on this one. The types
are not tool generated, so they would require updating, but it does
remove any runtime dependency. I may consider back-porting this approach
to reduce dependencies in the other plugins.

## How did you test this change?

Unit tests.
Manual testing.

## Are there any deployment considerations?

<!--
 Backend - Do we need to consider migrations or backfilling data?
-->

--- a/sdk/@launchdarkly/observability-dotnet/src/LaunchDarkly.Observability/LaunchDarkly.Observability.csproj
+++ b/sdk/@launchdarkly/observability-dotnet/src/LaunchDarkly.Observability/LaunchDarkly.Observability.csproj
@@ -28,6 +28,8 @@
   <!-- Allow the testing project to access internals. -->
   <ItemGroup Condition="'$(Configuration)'!='Release'">
     <InternalsVisibleTo Include="LaunchDarkly.Observability.Tests" />
+    <!-- Dynamically generated assembly used by Moq. Required for mocking in unit tests. -->
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2"/>
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Release' And '$(SKIP_SIGNING)'!='true'">
