--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,6 +16,8 @@ jobs:
             python-plugin-tag-name: ${{ steps.release.outputs['sdk/@launchdarkly/observability-python--tag_name'] }}
             android-plugin-released: ${{ steps.release.outputs['sdk/@launchdarkly/observability-android--release_created'] }}
             android-plugin-tag-name: ${{ steps.release.outputs['sdk/@launchdarkly/observability-android--tag_name'] }}
+            dotnet-plugin-released: ${{ steps.release.outputs['sdk/@launchdarkly/observability-dotnet--release_created'] }}
+            dotnet-plugin-tag-name: ${{ steps.release.outputs['sdk/@launchdarkly/observability-dotnet--tag_name'] }}
         steps:
             - uses: googleapis/release-please-action@a02a34c4d625f9be7cb89156071d8567266a2445
               id: release
@@ -85,3 +87,22 @@ jobs:
               with:
                   workspace-path: sdk/@launchdarkly/observability-android
                   aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
+
+    release-dotnet-plugin:
+        runs-on: ubuntu-latest
+        permissions:
+            actions: read
+            id-token: write # Used for publishing secrets and documentation.
+            contents: write
+        needs: ['release-package']
+        if: ${{ needs.release-package.outputs.dotnet-plugin-released == 'true' }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
+            - uses: ./.github/actions/publish-dotnet-sdk
+              with:
+                  workspace-path: sdk/@launchdarkly/observability-dotnet
+                  aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
+                  dry-run: false
+                  tag-name: ${{ needs.release-package.outputs.dotnet-plugin-tag-name }} 
