Use standard docs process.

--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -11,6 +11,7 @@ on:
                     - 'sdk/@launchdarkly/observability-node'
                     - 'sdk/@launchdarkly/observability-python'
                     - 'sdk/@launchdarkly/observability-react-native'
+                    - 'sdk/@launchdarkly/observability-dotnet'
     workflow_call:
         inputs:
             workspace_path:
