--- a/.github/actions/publish-dotnet-sdk/action.yml
+++ b/.github/actions/publish-dotnet-sdk/action.yml
@@ -5,13 +5,9 @@ inputs:
         description: 'The AWS role ARN to assume.'
         type: string
         required: true
-    dry_run:
+    dry-run:
         description: 'Is this a dry run. If so no package will be published.'
         type: boolean
-        required: true
-    tag_name:
-        description: 'The tag name for the dotnet package. Should be set when publishing a dotnet package.'
-        type: string
         required: true
 
 outputs:
@@ -25,7 +21,7 @@ runs:
     - uses: launchdarkly/gh-actions/actions/release-secrets@release-secrets-v1.2.0
       name: Get secrets
       with:
-        aws_assume_role: ${{ inputs.aws_role }}
+        aws_assume_role: ${{ inputs.aws-role-arn }}
         ssm_parameter_pairs: '/production/common/releasing/digicert/host = DIGICERT_HOST,
         /production/common/releasing/digicert/api_key = DIGICERT_API_KEY,
         /production/common/releasing/digicert/client_cert_file_b64 = DIGICERT_CLIENT_CERT_FILE_B64,
@@ -33,7 +29,6 @@ runs:
         /production/common/releasing/digicert/code_signing_cert_sha1_hash = DIGICERT_CODE_SIGNING_CERT_SHA1_HASH,
         /production/common/releasing/nuget/api_key = NUGET_API_KEY'
         s3_path_pairs: ${{ inputs.assembly_key_path_pair }}
-
 
     - name: Restore
       shell: bash
@@ -51,7 +46,7 @@ runs:
       run: dotnet pack --no-build --output nupkgs --configuration Release
 
     - name: Publish Package
-      if: ${{ inputs.dry_run == 'false' }}
+      if: ${{ inputs.dry-run == 'false' }}
       shell: bash
       working-directory: ./sdk/@launchdarkly/observability-dotnet
       run: |
@@ -63,7 +58,7 @@ runs:
 
     - name: Hash nuget packages
       id: package-hashes
-      if: ${{ inputs.dry_run == 'false' }}
+      if: ${{ inputs.dry-run == 'false' }}
       shell: bash
       working-directory: ./sdk/@launchdarkly/observability-dotnet
       run: |
