--- a/.github/actions/publish-dotnet-sdk/action.yml
+++ b/.github/actions/publish-dotnet-sdk/action.yml
@@ -28,7 +28,7 @@ runs:
         /production/common/releasing/digicert/client_cert_password = DIGICERT_CLIENT_CERT_PASSWORD,
         /production/common/releasing/digicert/code_signing_cert_sha1_hash = DIGICERT_CODE_SIGNING_CERT_SHA1_HASH,
         /production/common/releasing/nuget/api_key = NUGET_API_KEY'
-        s3_path_pairs: ${{ inputs.assembly_key_path_pair }}
+        s3_path_pairs: 'launchdarkly-releaser/dotnet/LaunchDarkly.snk = LaunchDarkly.snk'
 
     - name: Restore
       shell: bash
