--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,6 @@
 {
 	"sdk/@launchdarkly/observability-python": "0.1.0",
 	"go": "0.2.0",
-	"sdk/@launchdarkly/observability-android": "0.4.0"
+	"sdk/@launchdarkly/observability-android": "0.4.0",
+	"sdk/@launchdarkly/observability-dotnet": "0.0.0"
 }
